# test

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  otel-collector-config.yaml  setup-and-run.sh  test_api.py
data-store/: Dockerfile  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml  schemas.py
data-store/alembic/: env.py
data-store/alembic/versions/: 001_initial.py  002_add_client_id.py
document-api/: Dockerfile  README.md  config.py  main.py  pyproject.toml  telemetry.py
nginx/: nginx.conf
